# Phantom

./: .gitignore  CMakeLists.txt  LICENSE  Main.cpp  README.md
Application/: Application.cpp  Application.hpp
Application/Linux/: CMakeLists.txt  LinuxApplication.cpp  LinuxApplication.hpp
Application/Windows/: CMakeLists.txt  WindowsApplication.cpp  WindowsApplication.hpp
PhantomEngine/: CMakeLists.txt  Common.hpp  Math.hpp
PhantomEngine/Common/: CMakeLists.txt  Component.cpp  Component.hpp  Debug.cpp  Debug.hpp  Define.hpp  SerializableObject.cpp  SerializableObject.hpp  Type.cpp  Type.hpp  Value.cpp  Value.hpp
PhantomEngine/IO/: CMakeLists.txt  File.cpp  File.hpp
PhantomEngine/Math/: CMakeLists.txt  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
PhantomEngine/Render/: CMakeLists.txt  RenderSettings.hpp  RenderSystem.cpp  RenderSystem.hpp
PhantomEngine/Render/GraphicsInterface/: GraphicsInterface.cpp  GraphicsInterface.hpp
PhantomEngine/Render/GraphicsInterface/DX11/: CMakeLists.txt  DirectX11.cpp  DirectX11.hpp
PhantomEngine/Render/Shaders/: a2v.h  simple.ps  simple.pso  simple.vs  simple.vso  v2p.h
